[package]
name = "pearl"
version = "0.7.0"
description = "Pearl is a low level blob-based I/O library"
repository = "https://github.com/qoollo/pearl"
homepage = "https://github.com/qoollo/pearl"
documentation = "https://docs.rs/pearl"
keywords = ["blob", "blob-storage", "append-only", "key-value", "async"]
categories = ["data-structures", "filesystem"]
license = "MIT"
authors = ["Pavel Yakushin <p.yakushin@qoollo.com>", "Kirill Bushminkin <kbushminkin@gmail.com>"]
edition = "2018"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
# Don't update without checking for backwards compatibility!!!
ahash = "=0.7.4"

anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bitvec = "0.22"
chrono = "0.4"
clap = { version = "2.33", optional = true }
crc = "=2.0.0"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
rand = "0.8"
ring = "0.16"
rio = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio-stream = "0.1"
nix = "0.23.0"

[dependencies.tokio]
version = "1.10"
features = ["fs", "io-util", "sync", "time", "rt", "macros", "rt-multi-thread"]

[features]
# default = ["benchmark"]
benchmark = ["clap"]

[lib]
name = "pearl"

[[bin]]
name = "benchmark"
path = "src/benchmark/bin.rs"
required-features = ["benchmark"]

[build-dependencies]
chrono = "0.4"
