[package]
name = "pearl"
version = "0.20.0"
description = "Pearl is a low level blob-based I/O library"
repository = "https://github.com/qoollo/pearl"
homepage = "https://github.com/qoollo/pearl"
documentation = "https://docs.rs/pearl"
keywords = ["blob", "blob-storage", "append-only", "key-value", "async"]
categories = ["data-structures", "filesystem"]
license = "MIT"
authors = [
    "Pavel Yakushin <p.yakushin@qoollo.com>",
    "Kirill Bushminkin <kbushminkin@gmail.com>",
    "Ilia Kopylov",
    "Ivan Druzhitskiy",
    "Vladimir Stepanenko",
    "Pavel Perestoronin",
    "Konstantin Konnov",
    "Konstantin Bulany"
]
edition = "2021"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
# Don't update without checking for backwards compatibility!!!
ahash = "=0.7.6"

anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
crc = "=3.0.0"
futures = "0.3"
log = "0.4"
sha2 = "0.10"
rio =  { version = "0.9.4", optional = true}
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio-stream = "0.1"
nix = { version = "0.26", default_features = false, features = ["fs"] }
libc = "0.2"
static_assertions = "1.1"
bytes = "1.4"
async-lock = "2.7"
# Benchmark only dependencies
clap = { version = "3.2", optional = true }
env_logger = { version = "0.9", optional = true }

[dependencies.tokio]
version = "1.28"
features = ["fs", "io-util", "sync", "time", "rt", "macros", "rt-multi-thread"]

[features]
benchmark = ["dep:clap", "dep:env_logger"]
async-io-rio = ["dep:rio"]

[lib]
name = "pearl"

[[bin]]
name = "benchmark"
path = "src/benchmark/bin.rs"
required-features = ["benchmark"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
env_logger = "0.9"
chrono = "0.4"
rand = "0.8"
rusty-fork = "0.3.0"
